--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MVP_Food_Planner</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dailysuggest">Food You Might Like</string>
+    <string name="txtcuisines">By Cuisines</string>
+    <string name="txtcountry">Your Fav Country</string>
+    <string name="welcome">Welcome</string>
+    <string name="foodfiesta">Food Fiesta</string>
 </resources>
