display fav meals on fav fragment , no details handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="allingrediant">All Ingrediants</string>
     <string name="takelook">Take A Look !</string>
     <string name="ins">Instructions</string>
+    <string name="fav">Favorite Meals</string>
 </resources>
