--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="takelook">Take A Look !</string>
     <string name="ins">Instructions</string>
     <string name="fav">Favorite Meals</string>
+    <string name="onthisday">On This Day</string>
+    <string name="plannedmeals">Your Plan</string>
 </resources>
