list all ingredient

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="plannedmeals">Your Plan</string>
     <string name="date">Date</string>
     <string name="catFilter">Filter By Category</string>
+    <string name="bying">By Ingredients</string>
 </resources>
